--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ gdsub_ydroid_0/.idea/modules.xml
 gdsub_ydroid_0/.idea/gdsub_ydroid_0.iml
 gdsub_ydroid_0/.idea/deployment.xml
 gdsub_ydroid_0/.idea/sshConfigs.xml
+gdsub_ydroid_0/test.js
