--- a/gdsub_ydroid_0/package.json
+++ b/gdsub_ydroid_0/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gdsub_ydroid_0",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "keywords": [
     "gdsub",
     "ydroid"
@@ -13,6 +13,7 @@
     "ffmpeg": "0.0.4",
     "googleapis": "^109.0.0",
     "linebyline": "^1.3.0",
+    "mixed-english-and-chinese-tokenizer": "^1.1.0",
     "nodemailer": "^6.8.0",
     "youtube-dl": "^1.12.2"
   }
